# C-Raw-Edit

./: .clangd  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml  release.yml
include/: dynamic_strings.h  editor.h  utils.h
src/: dynamic_strings.c  editor.c  main.c  utils.c
